--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "server": "nodemon index.js",
+    "dev:all": "concurrently \"npm run client\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "mongoose": "^8.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "concurrently": "^7.0.0"
   }
 }
